@@ -19,6 +19,9 @@
  *
  */
 
+#include "config.h"
+#include "identifier.h"
+
 // For JavaScriptCore we need to avoid having static constructors.
 // Our strategy is to declare the global objects with a different type (initialized to 0)
 // and then use placement new to initialize the global objects later. This is not completely
@@ -27,14 +30,13 @@
 
 #if !PLATFORM(WIN_OS) // can't get this to compile on Visual C++ yet
 #define AVOID_STATIC_CONSTRUCTORS 1
+#else
+#define AVOID_STATIC_CONSTRUCTORS 0
 #endif
 
 #if AVOID_STATIC_CONSTRUCTORS
 #define KJS_IDENTIFIER_HIDE_GLOBALS 1
 #endif
-
-#include "config.h"
-#include "identifier.h"
 
 #include <kxmlcore/FastMalloc.h>
 #include <kxmlcore/HashSet.h>
